spiProbs.txt
rpi-spi.c: In function 'spi_one_byte':
rpi-spi.c:127:2: error: implicit declaration of function 'gpio_output' [-Werror=implicit-function-declaration]
  gpio_output(25, is_data);  // D/C = 0 for cmd  1 for data
  ^~~~~~~~~~~
rpi-spi.c:128:2: error: implicit declaration of function 'PUT32' [-Werror=implicit-function-declaration]
  PUT32(AUX_SPI0_CS, 0x000000B0); //TA=1 cs asserted
  ^~~~~
rpi-spi.c:9:26: error: 'RPi_IO_Base_Addr' undeclared (first use in this function)
 #define AUX_SPI0_CS     (RPi_IO_Base_Addr + 0x204000)
                          ^
rpi-spi.c:128:8: note: in expansion of macro 'AUX_SPI0_CS'
  PUT32(AUX_SPI0_CS, 0x000000B0); //TA=1 cs asserted
        ^~~~~~~~~~~
rpi-spi.c:9:26: note: each undeclared identifier is reported only once for each function it appears in
 #define AUX_SPI0_CS     (RPi_IO_Base_Addr + 0x204000)
                          ^
rpi-spi.c:128:8: note: in expansion of macro 'AUX_SPI0_CS'
  PUT32(AUX_SPI0_CS, 0x000000B0); //TA=1 cs asserted
        ^~~~~~~~~~~
rpi-spi.c:131:7: error: implicit declaration of function 'GET32' [-Werror=implicit-function-declaration]
   if (GET32(AUX_SPI0_CS) & (1 << 18)) break; //TXD
       ^~~~~
rpi-spi.c: At top level:
rpi-spi.c:247:14: error: unknown type name 'RGB565'
              RGB565* imageDest)
              ^~~~~~
rpi-spi.c: In function 'DisplayBitmap':
rpi-spi.c:283:3: error: unknown type name 'RGB565'
   RGB565 buf[640] = { 0 };
   ^~~~~~
rpi-spi.c:292:4: error: implicit declaration of function 'CvtBmpLine' [-Werror=implicit-function-declaration]
    CvtBmpLine(xferWidth, 24, &src[xferWidth*y], &buf[0]);
    ^~~~~~~~~~
rpi-spi.c:298:22: error: request for member 'Raw16' in something not a structure or union
     spi_data16(buf[i].Raw16);
                      ^
rpi-spi.c: At top level:
rpi-spi.c:304:66: error: unknown type name 'RGB565'
 static void SPI_WriteChar(uint16_t xoff, uint16_t yoff, char ch, RGB565 fc, RGB565 bc, font_t* font) 
                                                                  ^~~~~~
rpi-spi.c:304:77: error: unknown type name 'RGB565'
 oid SPI_WriteChar(uint16_t xoff, uint16_t yoff, char ch, RGB565 fc, RGB565 bc, font_t* font) 
                                                                     ^~~~~~
rpi-spi.c:304:88: error: unknown type name 'font_t'
 teChar(uint16_t xoff, uint16_t yoff, char ch, RGB565 fc, RGB565 bc, font_t* font) 
                                                                     ^~~~~~
rpi-spi.c:332:68: error: unknown type name 'RGB565'
 static void SPI_WriteText(uint16_t xoff, uint16_t yoff, char* txt, RGB565 fc, RGB565 bc, font_t* font)
                                                                    ^~~~~~
rpi-spi.c:332:79: error: unknown type name 'RGB565'
 d SPI_WriteText(uint16_t xoff, uint16_t yoff, char* txt, RGB565 fc, RGB565 bc, font_t* font)
                                                                     ^~~~~~
rpi-spi.c:332:90: error: unknown type name 'font_t'
 Text(uint16_t xoff, uint16_t yoff, char* txt, RGB565 fc, RGB565 bc, font_t* font)
                                                                     ^~~~~~
rpi-spi.c: In function 'spi_init':
rpi-spi.c:4:22: error: 'RPi_IO_Base_Addr' undeclared (first use in this function)
 #define AUX_ENABLES (RPi_IO_Base_Addr + 0x215004)
                      ^
rpi-spi.c:345:13: note: in expansion of macro 'AUX_ENABLES'
  ra = GET32(AUX_ENABLES);
             ^~~~~~~~~~~
rpi-spi.c:349:2: error: implicit declaration of function 'gpio_setup' [-Werror=implicit-function-declaration]
  gpio_setup(9, GPIO_ALTFUNC0);   // MISO
  ^~~~~~~~~~
rpi-spi.c:349:16: error: 'GPIO_ALTFUNC0' undeclared (first use in this function)
  gpio_setup(9, GPIO_ALTFUNC0);   // MISO
                ^~~~~~~~~~~~~
rpi-spi.c:351:16: error: 'GPIO_OUTPUT' undeclared (first use in this function)
  gpio_setup(7, GPIO_OUTPUT);   // CS1 .. USE as RESET
                ^~~~~~~~~~~
rpi-spi.c:370:2: error: implicit declaration of function 'timer_wait' [-Werror=implicit-function-declaration]
  timer_wait(10000);
  ^~~~~~~~~~
rpi-spi.c:481:2: error: implicit declaration of function 'SPI_WriteText' [-Werror=implicit-function-declaration]
  SPI_WriteText(50, 100, "Upside down is fine Ingo", (RGB565) { .Raw16 = yellow }, (RGB565) { .Raw16 = blue }, (font_t*)GetFont(2));
  ^~~~~~~~~~~~~
rpi-spi.c:481:54: error: 'RGB565' undeclared (first use in this function)
  SPI_WriteText(50, 100, "Upside down is fine Ingo", (RGB565) { .Raw16 = yellow }, (RGB565) { .Raw16 = blue }, (font_t*)GetFont(2));
                                                      ^~~~~~
rpi-spi.c:481:62: error: expected ')' before '{' token
  SPI_WriteText(50, 100, "Upside down is fine Ingo", (RGB565) { .Raw16 = yellow }, (RGB565) { .Raw16 = blue }, (font_t*)GetFont(2));
                                                              ^
cc1: all warnings being treated as errors

